# rs-webhook-github-app-star-invite

./: .env.example  .gitignore  Cargo.toml  Secrets.toml.example  changelog.md  readme.md
src/: ghb.rs  main.rs
src/ghb/: config.rs  constants.rs  ghapi.rs  github.rs  hmac.rs  mod.rs  server.rs  tokio_worker.rs
src/ghb/ghapi/: collaborators.rs  headers.rs  organisations.rs  private_gh.rs
