[package]
name = "rs-github-star-add-member-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.3"
chrono = "0.4.28"
dotenv = "0.15.0"
hex-literal = "0.4.1"
hmac = "0.12.1"
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
minreq = { version = "2.9.1", features = ["https"] }
regex = "1.9.4"
rouille = "3.6.2"
serde = "1.0.188"
serde_json = "1.0.105"
sha2 = "0.10.7"
tokio = { version = "1.32.0", features = ["full"] }
