[package]
name = "rs-github-star-add-member-bot"
version = "0.1.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
base64 = "0.21.3"
chrono = "0.4.28"
hmac = "0.12.1"
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
minreq = { version = "2.13.4", features = ["https-native"] }
once_cell = "1.21.3"
regex = "1.9.4"
rouille = "3.6.2"
serde = "1.0.188"
serde_json = "1.0.105"
sha2 = "0.10.7"
shuttle-runtime = "0.55.0"
tokio = { version = "1.32.0", features = ["full"] }
rand = "0.8"
hex = "0.4"   

[dependencies.uuid]
version = "1.17.0"
features = [
    "v4",
]